[package]
name = "juniper-jet"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "Rust client for the Juniper JET gRPC API"
license = "MIT"
repository = "https://github.com/wolcomm/juniper-jet-rs"
readme = "README.md"
categories = ["network-programming"]

[lib]
name = "jet"

[dependencies]

[dev-dependencies]
version-sync = "^0.9"
